dockercompose: add healthcheck to tilt ui
fixes https://github.com/tilt-dev/tilt/issues/6413
fixes https://github.com/tilt-dev/tilt/issues/6037
