# pkg/openapi/zz_generated.openapi.go
@@ -201,6 +201,7 @@ func GetOpenAPIDefinitions(ref common.ReferenceCallback) map[string]common.OpenA
 		"github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIInputSpec":                       schema_pkg_apis_core_v1alpha1_UIInputSpec(ref),
 		"github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIInputStatus":                     schema_pkg_apis_core_v1alpha1_UIInputStatus(ref),
 		"github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResource":                        schema_pkg_apis_core_v1alpha1_UIResource(ref),
+		"github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceCompose":                 schema_pkg_apis_core_v1alpha1_UIResourceCompose(ref),
 		"github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceCondition":               schema_pkg_apis_core_v1alpha1_UIResourceCondition(ref),
 		"github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceKubernetes":              schema_pkg_apis_core_v1alpha1_UIResourceKubernetes(ref),
 		"github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceLink":                    schema_pkg_apis_core_v1alpha1_UIResourceLink(ref),
@@ -2217,6 +2218,13 @@ func schema_pkg_apis_core_v1alpha1_DockerContainerState(ref common.ReferenceCall
 						SchemaProps: spec.SchemaProps{
 							Description: "When the container process finished.",
 							Ref:         ref("k8s.io/apimachinery/pkg/apis/meta/v1.MicroTime"),
+						},
+					},
+					"healthStatus": {
+						SchemaProps: spec.SchemaProps{
+							Description: "Status is one of Starting, Healthy or Unhealthy",
+							Type:        []string{"string"},
+							Format:      "",
 						},
 					},
 				},
@@ -7900,6 +7908,26 @@ func schema_pkg_apis_core_v1alpha1_UIResource(ref common.ReferenceCallback) comm
 	}
 }
 
+func schema_pkg_apis_core_v1alpha1_UIResourceCompose(ref common.ReferenceCallback) common.OpenAPIDefinition {
+	return common.OpenAPIDefinition{
+		Schema: spec.Schema{
+			SchemaProps: spec.SchemaProps{
+				Description: "UIResourceCompose contains status information specific to Docker Compose.",
+				Type:        []string{"object"},
+				Properties: map[string]spec.Schema{
+					"healthStatus": {
+						SchemaProps: spec.SchemaProps{
+							Description: "Status is one of Starting, Healthy or Unhealthy",
+							Type:        []string{"string"},
+							Format:      "",
+						},
+					},
+				},
+			},
+		},
+	}
+}
+
 func schema_pkg_apis_core_v1alpha1_UIResourceCondition(ref common.ReferenceCallback) common.OpenAPIDefinition {
 	return common.OpenAPIDefinition{
 		Schema: spec.Schema{
@@ -8304,6 +8332,12 @@ func schema_pkg_apis_core_v1alpha1_UIResourceStatus(ref common.ReferenceCallback
 							Ref:         ref("github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceKubernetes"),
 						},
 					},
+					"composeResourceInfo": {
+						SchemaProps: spec.SchemaProps{
+							Description: "Extra data about Compose resources.",
+							Ref:         ref("github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceCompose"),
+						},
+					},
 					"localResourceInfo": {
 						SchemaProps: spec.SchemaProps{
 							Description: "Extra data about Local resources",
@@ -8383,7 +8417,7 @@ func schema_pkg_apis_core_v1alpha1_UIResourceStatus(ref common.ReferenceCallback
 			},
 		},
 		Dependencies: []string{
-			"github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.DisableResourceStatus", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIBuildRunning", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIBuildTerminated", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceCondition", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceKubernetes", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceLink", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceLocal", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceStateWaiting", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceTargetSpec", "k8s.io/apimachinery/pkg/apis/meta/v1.MicroTime"},
+			"github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.DisableResourceStatus", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIBuildRunning", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIBuildTerminated", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceCompose", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceCondition", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceKubernetes", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceLink", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceLocal", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceStateWaiting", "github.com/tilt-dev/tilt/pkg/apis/core/v1alpha1.UIResourceTargetSpec", "k8s.io/apimachinery/pkg/apis/meta/v1.MicroTime"},
 	}
 }
 
